feat: 連絡先にステータスを追加し、履歴の色分けに反映

--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
                   <th scope="col">メールアドレス</th>
                   <th scope="col">電話番号</th>
                   <th scope="col">メモ</th>
+                  <th scope="col">ステータス</th>
                   <th scope="col">操作</th>
                 </tr>
               </thead>
