feat: 連絡先UIを改善しテーブルをスリム化

--- a/index.html
+++ b/index.html
@@ -220,9 +220,7 @@
                 <tr>
                   <th scope="col">企業名</th>
                   <th scope="col">担当者名</th>
-                  <th scope="col">メールアドレス</th>
                   <th scope="col">電話番号</th>
-                  <th scope="col">メモ</th>
                   <th scope="col">ステータス</th>
                   <th scope="col">操作</th>
                 </tr>
@@ -276,6 +274,7 @@
       <div class="approach-modal-body">
         <!-- 左：新規追加フォーム -->
         <div class="form-container">
+          <div id="approach-contact-details" style="margin-bottom: 16px; padding: 10px; border: 1px solid var(--line); border-radius: 10px; background: #fcfdfe;"></div>
           <h3>新規アプローチの追加</h3>
           <form id="approach-form" autocomplete="off">
             <input type="hidden" id="approach-company-name"/>
