feat: Add user filter to contacts list

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
             <input type="text" id="contacts-search-box" placeholder="企業名・担当者名などで検索…"/>
           </div>
           <div class="data-io-buttons">
+            <button id="filter-user-btn" class="secondary-btn">ユーザー表示</button>
             <input type="file" id="contacts-import-file" accept=".csv" style="display:none;"/>
             <button id="contacts-import-btn" class="secondary-btn">連絡先をインポート</button>
             <button id="contacts-export-btn" class="secondary-btn">連絡先をエクスポート</button>
